Fix html overflow and reverse sort buttons

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
     background-image:     -ms-linear-gradient(180deg, #2962ff 20%, #0039cb 80%); 
     background-image:      -o-linear-gradient(180deg, #2962ff 20%, #0039cb 80%); 
     background-image:         linear-gradient(180deg, #2962ff 20%, #0039cb 80%);
-    height: 100%;
+    min-height: 100%;
     width: 100%;
 }
 body {
